tests/positive/main_with_args.ax
module main_with_args;

fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    if argc < 1 || argv == null {
        return 1;
    }
    return 0;
}
