tests/negative/while_condition_bool.ax
module while_condition_bool;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    while 1 {
        return 1;
    }
    return 0;
}
